--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,31 +10,8 @@
 </head>
 
 <body>
-    <div class="card__wrapper">
-        <div class="card__container">
-
-            <div class="color__container">
-                <div class="color__name">
-                    <span></span>
-                </div>
-                <div class="color__hex">
-                    <span></span>
-                </div>
-            </div>
-
-            <div class="poem__container">
-                <div class="poem__inner">
-                    <span class="poem__text">
-                    </span>
-                </div>
-            </div>
-
-            <div class="title__container">
-                <div class="title__text">
-                    <span>DELPHI</span>
-                </div>
-            </div>
-        </div>
+    <div class="card__positioner">
+        <%- include('./partials/card'); %>
     </div>
 
     <script>
